RESOLVED FIXED214620
REGRESSION (WebSQL disablement): Fudget app is unresponsive on launch
https://bugs.webkit.org/show_bug.cgi?id=214620
Summary REGRESSION (WebSQL disablement): Fudget app is unresponsive on launch
Tim Horton
Reported 2020-07-21 16:01:17 PDT
REGRESSION (WebSQL disablement): Fudget app is unresponsive on launch
Attachments
Patch (4.01 KB, patch)
2020-07-21 16:01 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2020-07-21 16:01:38 PDT
Tim Horton
Comment 2 2020-07-21 16:01:40 PDT
Geoffrey Garen
Comment 3 2020-07-21 16:08:40 PDT
Comment on attachment 404869 [details] Patch r=me
EWS
Comment 4 2020-07-21 16:45:58 PDT
Committed r264682: <https://trac.webkit.org/changeset/264682> All reviewed patches have been landed. Closing bug and clearing flags on attachment 404869 [details].
Note You need to log in before you can comment on or make changes to this bug.