REGRESSION (WebSQL disablement): Fudget app is unresponsive on launch https://bugs.webkit.org/show_bug.cgi?id=214620 <rdar://problem/65443085>

Reviewed by Geoffrey Garen.

Source/WebCore:

* platform/RuntimeApplicationChecks.h:
* platform/cocoa/RuntimeApplicationChecksCocoa.mm:
(WebCore::IOSApplication::isFudget):

Source/WebKitLegacy/mac:

* WebView/WebPreferences.mm:
(+[WebPreferences initialize]):
Add Fudget to the list of apps that can use WebSQL until linked on or after iOS 14.


Canonical link: https://commits.webkit.org/227427@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264682 268f45cc-cd09-0410-ab3c-d52691b4dbfc