Source/WebCore/platform/cocoa/RuntimeApplicationChecksCocoa.mm
@@ -272,6 +272,12 @@ bool IOSApplication::isJesusCalling()
     return isJesusCalling;
 }
 
+bool IOSApplication::isFudget()
+{
+    static bool isFudget = applicationBundleIsEqualTo("com.dannyconnell.fudget"_s);
+    return isFudget;
+}
+
 bool IOSApplication::isFamilyHealthApp()
 {
     static bool isFamilyHealthApp = applicationBundleStartsWith("com.wildflowerhealth.Grow"_s) || applicationBundleStartsWith("com.wildflowerhealth.UGROW");
